Rep values crud finished
