# src/Controller/v1/CharacteristicsUpsertController.php
@@ -56,6 +56,10 @@ class CharacteristicsUpsertController implements ValidatableRequest
      *          @OA\JsonContent(
      *              ref=@Model(type=App\dto\CharOutDto::class)
      *          )
+     *      ),
+     *      @OA\Response(
+     *          response="400",
+     *          ref="#/components/responses/ValidationFailed"
      *      )
      * )
      *
@@ -107,6 +111,10 @@ class CharacteristicsUpsertController implements ValidatableRequest
      *      @OA\Response(
      *          response="404",
      *          ref="#/components/responses/NotFound"
+     *      ),
+     *      @OA\Response(
+     *          response="400",
+     *          ref="#/components/responses/ValidationFailed"
      *      )
      * )
      *
@@ -160,6 +168,10 @@ class CharacteristicsUpsertController implements ValidatableRequest
      *      @OA\Response(
      *          response="404",
      *          ref="#/components/responses/NotFound"
+     *      ),
+     *      @OA\Response(
+     *          response="400",
+     *          ref="#/components/responses/ValidationFailed"
      *      )
      * )
      *
